# sphinx_practice

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: docs.yaml
docs/: conf.py  index.rst  installation.rst  usage.rst
src/foobar/: __init__.py
src/footxbar/: __init__.py  example.py
