[project]
name = "foobar"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sphinx (>=7.0,<8.0)",
    "pytest>=9.0.0,<10.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]
