[project]
name = "footxbar"
version = "0.6.0"
description = "A toy package for practicing PyPI publishing with Poetry"
authors = [
    {name = "Aaron Ciuffo", email = "245484@buas.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["fastapi (>=0.136.0,<0.137.0)", "uvicorn (>=0.45.0,<0.46.0)"]

[project.urls]
Homepage = "https://github.com/AaronCiuffo245484/sphinx_practice"
Repository = "https://github.com/AaronCiuffo245484/sphinx_practice"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "footxbar", from = "src"}]

[dependency-groups]
dev = [
    "sphinx (>=7.0,<8.0)",
    "pytest>=9.0.0,<10.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "twine (>=6.0)",
    "build (>=1.4.3,<2.0.0)",
]